--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
 <h1>Welcome to my website</h1>
+<h1>Want to know more about me. Click below link</h1>
+<a href="aboutus.html">About me</a>
 </body>
 </html>
