--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <h1>Welcome to my website</h1>
 <h1>Want to know more about me. Click below link</h1>
-<a href="aboutus.html">About me</a>
+<a href="aboutus.html">About me</a><br>
 <a href="register.html">Register</a>
 </body>
 </html>
