--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-    <form action="success.html" method="post">
+    <form action="success.html" method="get">
 
     <h1>Sign Up</h1>
     <label>Enter name</label><br>
