--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
 <html>
+    <head>
+        <title>Test Automation Practice Web Site</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 <body>
-<h1>Welcome to my website</h1>
-<h1>Want to know more about me. Click below link</h1>
-<a href="aboutus.html">About me</a><br>
-<a href="register.html">Register</a>
+<div class="divmain">
+<h1>Welcome to test automation practive web site</h1>
+<h2>Developed by Kaushalya Technical Training and Consultancy Services</h2>
+
+<nav>
+    <ul>
+        <li><a href="aboutus.html">About Us</a><br></li>
+    </ul>
+    <ul>
+        <li><a href="register.html">Register with Us</a><br></li>
+    </ul>
+    <ul>
+        <li><a href="login.html">Login</a><br></li>
+    </ul>
+
+    <ul>
+        <li><a href="services.html">Services</a><br></li>
+    </ul>
+
+    <ul>
+        <li><a href="contact.html">Contact</a><br></li>
+    </ul>
+  
+    
+</nav>
+
+    <h1 style="text-align: center;">All about test automation</h1>
+    </div>
 </body>
 </html>
