--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
     
     <label>Gender</label><br>
     Male: <input type="radio" name="gender" id="male" >
-    Female: <input type="radio" name="gender" id="male" >
+    Female: <input type="radio" name="gender" id="female" >
     <br>
 
     <label>Date Of Birth</label><br>
